Add more memory for tests