@@ -91,12 +91,16 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
+                    <configuration>
+                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>${maven-failsafe-plugin.version}</version>
                     <configuration>
+                        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                         <systemProperties>
                             <java.awt.headless>true</java.awt.headless>
                             <tomcat.http.port>${tomcat.http.port}</tomcat.http.port>
